--- a/access/index.html
+++ b/access/index.html
@@ -455,7 +455,7 @@
                         <strong>AlimSTAY IZU</strong>
                     </div>
                     <button class="copy-button" onclick="copyToClipboard('〒410-3302 静岡県伊豆市土肥2789 AlimSTAY IZU')">住所をコピー</button>
-                    <a href="https://maps.app.goo.gl/PLACEHOLDER_URL" target="_blank" class="map-button">Google Mapsで開く</a>
+                    <a href="https://maps.app.goo.gl/5EM3gcRfi144QMB67?g_st=ic" target="_blank" class="map-button">Google Mapsで開く</a>
                 </div>
 
                 <div class="info-block">
