--- a/access/index.html
+++ b/access/index.html
@@ -630,7 +630,7 @@
                         <strong>AlimSTAY IZU</strong>
                     </div>
                     <button class="copy-button" onclick="copyToClipboard('2789 Toi, Izu, Shizuoka 410-3302, Japan AlimSTAY IZU')">Copy Address</button>
-                    <a href="https://maps.app.goo.gl/PLACEHOLDER_URL" target="_blank" class="map-button">Open in Google Maps</a>
+                    <a href="https://maps.app.goo.gl/5EM3gcRfi144QMB67?g_st=ic" target="_blank" class="map-button">Open in Google Maps</a>
                 </div>
 
                 <div class="info-block">
@@ -805,7 +805,7 @@
                         <strong>AlimSTAY IZU</strong>
                     </div>
                     <button class="copy-button" onclick="copyToClipboard('〒410-3302 静冈县伊豆市土肥2789 AlimSTAY IZU')">复制地址</button>
-                    <a href="https://maps.app.goo.gl/PLACEHOLDER_URL" target="_blank" class="map-button">在Google地图中打开</a>
+                    <a href="https://maps.app.goo.gl/5EM3gcRfi144QMB67?g_st=ic" target="_blank" class="map-button">在Google地图中打开</a>
                 </div>
 
                 <div class="info-block">
