--- a/access/index.html
+++ b/access/index.html
@@ -455,7 +455,7 @@
                         <strong>AlimSTAY IZU</strong>
                     </div>
                     <button class="copy-button" onclick="copyToClipboard('〒410-3302 静岡県伊豆市土肥2789 AlimSTAY IZU')">住所をコピー</button>
-                    <a href="https://maps.app.goo.gl/5EM3gcRfi144QMB67?g_st=ic" target="_blank" class="map-button">Google Mapsで開く</a>
+                    <a href="https://maps.app.goo.gl/PLACEHOLDER_URL" target="_blank" class="map-button">Google Mapsで開く</a>
                 </div>
 
                 <div class="info-block">
@@ -483,13 +483,13 @@
                     <div class="accordion-content">
                         <div class="accordion-body">
                             <p><strong>ナビ入力の注意</strong><br>
-                            住所（静岡県伊豆市土肥2789）または電話番号（0558-98-XXXX）で検索してください。<strong>以前の物件名「わくだや」</strong>で検索すると、ピンがずれる可能性があります。</p>
+                            住所（静岡県伊豆市土肥2789）で検索してください。<strong>以前の物件名「わくだや」</strong>と表示される場合があります。</p>
 
                             <p><strong>高速道路</strong><br>
-                            新東名高速道路「長泉沼津IC」または東名高速道路「沼津IC」から伊豆縦貫道を経由し、国道136号線で約90分。</p>
+                            新東名高速道路「長泉沼津IC」または東名高速道路「沼津IC」から伊豆縦貫道を経由し、国道136号線で約<strong>60分</strong>。</p>
 
                             <p><strong>所要時間</strong><br>
-                            東京方面から約3時間30分（休憩含まず）。</p>
+                            <strong>横浜から2時間20分</strong>、<strong>東京から約2時間50分</strong>（休憩含まず）。</p>
                         </div>
                     </div>
                 </div>
@@ -533,7 +533,7 @@
                     <div class="accordion-content">
                         <div class="accordion-body">
                             <p><strong>駐車場について</strong><br>
-                            当ホテルは<strong>専用駐車場がございません</strong>。近隣の<strong>松原公園駐車場（公共）</strong>をご利用ください。</p>
+                            <strong>専用駐車場はございません</strong>。近隣の<strong>松原公園駐車場（公共）</strong>をご利用ください。</p>
 
                             <p><strong>料金体系</strong></p>
                             <table class="info-table">
@@ -576,7 +576,7 @@
                     <button class="accordion-header" onclick="toggleAccordion(this)">入口の説明</button>
                     <div class="accordion-content">
                         <div class="accordion-body">
-                            <p>建物正面の<strong>ダークグレーの壁</strong>に設置された<strong>キーボックス</strong>が入口です。</p>
+                            <p>建物は<strong>海水浴場の正面</strong>に位置しており、1F部分が<strong>黒い壁</strong>になっております。<strong>グレーの石張り</strong>に<strong>木目調のドア</strong>が入口です。入り口暗証番号は「チェックインのご案内」に記載されております。</p>
                         </div>
                     </div>
                 </div>
@@ -630,7 +630,7 @@
                         <strong>AlimSTAY IZU</strong>
                     </div>
                     <button class="copy-button" onclick="copyToClipboard('2789 Toi, Izu, Shizuoka 410-3302, Japan AlimSTAY IZU')">Copy Address</button>
-                    <a href="https://maps.app.goo.gl/5EM3gcRfi144QMB67?g_st=ic" target="_blank" class="map-button">Open in Google Maps</a>
+                    <a href="https://maps.app.goo.gl/PLACEHOLDER_URL" target="_blank" class="map-button">Open in Google Maps</a>
                 </div>
 
                 <div class="info-block">
@@ -658,13 +658,13 @@
                     <div class="accordion-content">
                         <div class="accordion-body">
                             <p><strong>Navigation Note</strong><br>
-                            Search by address (2789 Toi, Izu, Shizuoka) or phone number (0558-98-XXXX). Searching by the <strong>former property name "Wakudaya"</strong> may lead to an incorrect location.</p>
+                            Search by address (2789 Toi, Izu, Shizuoka). The <strong>former property name "Wakudaya"</strong> may be displayed.</p>
 
                             <p><strong>Expressway</strong><br>
-                            From Shin-Tomei Expressway "Nagaizumi-Numazu IC" or Tomei Expressway "Numazu IC," take the Izu Jukan Expressway and Route 136 for about 90 minutes.</p>
+                            From Shin-Tomei Expressway "Nagaizumi-Numazu IC" or Tomei Expressway "Numazu IC," take the Izu Jukan Expressway and Route 136 for about <strong>60 minutes</strong>.</p>
 
                             <p><strong>Duration</strong><br>
-                            Approximately 3 hours 30 minutes from Tokyo area (excluding breaks).</p>
+                            <strong>2 hours 20 minutes from Yokohama</strong>, <strong>about 2 hours 50 minutes from Tokyo</strong> (excluding breaks).</p>
                         </div>
                     </div>
                 </div>
@@ -751,7 +751,7 @@
                     <button class="accordion-header" onclick="toggleAccordion(this)">Entrance Description</button>
                     <div class="accordion-content">
                         <div class="accordion-body">
-                            <p>The entrance is the <strong>key box</strong> installed on the <strong>dark gray wall</strong> at the front of the building.</p>
+                            <p>The building is located <strong>directly in front of the beach</strong>. The 1st floor has a <strong>black wall</strong>. The entrance is a <strong>wood-grain door</strong> set in <strong>gray stone</strong>. The entrance code is provided in the "Check-in Guide."</p>
                         </div>
                     </div>
                 </div>
@@ -805,7 +805,7 @@
                         <strong>AlimSTAY IZU</strong>
                     </div>
                     <button class="copy-button" onclick="copyToClipboard('〒410-3302 静冈县伊豆市土肥2789 AlimSTAY IZU')">复制地址</button>
-                    <a href="https://maps.app.goo.gl/5EM3gcRfi144QMB67?g_st=ic" target="_blank" class="map-button">在Google地图中打开</a>
+                    <a href="https://maps.app.goo.gl/PLACEHOLDER_URL" target="_blank" class="map-button">在Google地图中打开</a>
                 </div>
 
                 <div class="info-block">
@@ -833,13 +833,13 @@
                     <div class="accordion-content">
                         <div class="accordion-body">
                             <p><strong>导航注意事项</strong><br>
-                            请搜索地址（静冈县伊豆市土肥2789）或电话号码（0558-98-XXXX）。搜索<strong>前物业名称"Wakudaya"</strong>可能会导致定位不准确。</p>
+                            请搜索地址（静冈县伊豆市土肥2789）。可能会显示<strong>前物业名称"Wakudaya"</strong>。</p>
 
                             <p><strong>高速公路</strong><br>
-                            从新东名高速公路"长泉沼津IC"或东名高速公路"沼津IC"经伊豆纵贯道，沿国道136号线行驶约90分钟。</p>
+                            从新东名高速公路"长泉沼津IC"或东名高速公路"沼津IC"经伊豆纵贯道，沿国道136号线行驶约<strong>60分钟</strong>。</p>
 
                             <p><strong>所需时间</strong><br>
-                            从东京方向出发约3小时30分钟（不含休息）。</p>
+                            <strong>从横滨出发2小时20分钟</strong>，<strong>从东京出发约2小时50分钟</strong>（不含休息）。</p>
                         </div>
                     </div>
                 </div>
@@ -926,7 +926,7 @@
                     <button class="accordion-header" onclick="toggleAccordion(this)">入口说明</button>
                     <div class="accordion-content">
                         <div class="accordion-body">
-                            <p>入口是安装在建筑物正面<strong>深灰色墙壁</strong>上的<strong>钥匙箱</strong>。</p>
+                            <p>建筑位于<strong>海滩正前方</strong>，一楼部分是<strong>黑色的墙壁</strong>。入口是镶嵌在<strong>灰色石材</strong>中的<strong>木纹门</strong>。入口密码在"入住指南"中提供。</p>
                         </div>
                     </div>
                 </div>
