--- a/access/index.html
+++ b/access/index.html
@@ -459,18 +459,19 @@
                 </div>
 
                 <div class="info-block">
-                    <div class="info-label">目印</div>
-                    <div class="info-content">
-                        建物外観は<strong>ダークグレーのモダンなデザイン</strong>です。隣接する<strong>松原公園</strong>が目印です。
-                    </div>
-                </div>
-
-                <div class="info-block">
                     <div class="info-label">チェックイン</div>
                     <div class="info-content">
                         チェックインは<strong>当日15:00まで</strong>に、各OTAのメッセージBOXに届く「チェックインのお知らせ」からお手続きください。
                     </div>
                     <a href="faq.html" class="map-button">FAQページへ</a>
+                </div>
+            </div>
+
+            <!-- Google Map Section -->
+            <div style="background: var(--color-white); padding: 30px; border-radius: 8px; margin-bottom: 40px; box-shadow: 0 2px 12px rgba(0, 0, 0, 0.04);">
+                <h2 style="font-size: 18px; font-weight: 700; margin-bottom: 20px; color: var(--color-black);">Google Maps</h2>
+                <div style="width: 100%; height: 400px; border-radius: 6px; overflow: hidden; background: #f0f0f0; display: flex; align-items: center; justify-content: center; color: #999; font-size: 14px;">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3271.9063865633293!2d138.7904834!3d34.9087987!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6019f58cbfb84e47%3A0x75bdbee5e4596ea7!2sAlim%20Stay%E3%82%A2%E3%83%AA%E3%83%A0%E3%82%B9%E3%83%86%E3%82%A4%E4%BC%8A%E8%B1%86!5e0!3m2!1sja!2sjp!4v1706555000000" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
 
@@ -634,18 +635,19 @@
                 </div>
 
                 <div class="info-block">
-                    <div class="info-label">Landmark</div>
-                    <div class="info-content">
-                        The building exterior is a <strong>modern dark gray design</strong>. The adjacent <strong>Matsubara Park</strong> is a key landmark.
-                    </div>
-                </div>
-
-                <div class="info-block">
                     <div class="info-label">Check-in</div>
                     <div class="info-content">
                         Please complete check-in using the "Check-in Notice" sent to your OTA message box <strong>by 3:00 PM on the day of arrival</strong>.
                     </div>
                     <a href="faq.html" class="map-button">Go to FAQ Page</a>
+                </div>
+            </div>
+
+            <!-- Google Map Section -->
+            <div style="background: var(--color-white); padding: 30px; border-radius: 8px; margin-bottom: 40px; box-shadow: 0 2px 12px rgba(0, 0, 0, 0.04);">
+                <h2 style="font-size: 18px; font-weight: 700; margin-bottom: 20px; color: var(--color-black);">Map</h2>
+                <div style="width: 100%; height: 400px; border-radius: 6px; overflow: hidden; background: #f0f0f0; display: flex; align-items: center; justify-content: center; color: #999; font-size: 14px;">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3271.9063865633293!2d138.7904834!3d34.9087987!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6019f58cbfb84e47%3A0x75bdbee5e4596ea7!2sAlim%20Stay%E3%82%A2%E3%83%AA%E3%83%A0%E3%82%B9%E3%83%86%E3%82%A4%E4%BC%8A%E8%B1%86!5e0!3m2!1sen!2sjp!4v1706555000000" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
 
@@ -809,18 +811,19 @@
                 </div>
 
                 <div class="info-block">
-                    <div class="info-label">地标</div>
-                    <div class="info-content">
-                        建筑外观为<strong>现代深灰色设计</strong>。毗邻的<strong>松原公园</strong>是重要地标。
-                    </div>
-                </div>
-
-                <div class="info-block">
                     <div class="info-label">入住</div>
                     <div class="info-content">
                         请在<strong>当天下午3:00之前</strong>，通过发送到您OTA消息框中的"入住通知"完成入住手续。
                     </div>
                     <a href="faq.html" class="map-button">前往FAQ页面</a>
+                </div>
+            </div>
+
+            <!-- Google Map Section -->
+            <div style="background: var(--color-white); padding: 30px; border-radius: 8px; margin-bottom: 40px; box-shadow: 0 2px 12px rgba(0, 0, 0, 0.04);">
+                <h2 style="font-size: 18px; font-weight: 700; margin-bottom: 20px; color: var(--color-black);">Google 地图</h2>
+                <div style="width: 100%; height: 400px; border-radius: 6px; overflow: hidden; background: #f0f0f0; display: flex; align-items: center; justify-content: center; color: #999; font-size: 14px;">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3271.9063865633293!2d138.7904834!3d34.9087987!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6019f58cbfb84e47%3A0x75bdbee5e4596ea7!2sAlim%20Stay%E3%82%A2%E3%83%AA%E3%83%A0%E3%82%B9%E3%83%86%E3%82%A4%E4%BC%8A%E8%B1%86!5e0!3m2!1szh-CN!2sjp!4v1706555000000" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
 
